--- a/Calculator.html
+++ b/Calculator.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/Calculator_style.css">
+    <link rel="stylesheet" href="./CSS/Calculator_style.css">
 
 </head>
-<body>
+<body>C
     <div class="container">
         
         <div class="calculator">
@@ -47,6 +47,7 @@
                     <input type="button" value="=" onclick="display.value =eval(display.value)" class="equal operator">
                 </div>
             </form>
+            <p>&copy; copyright <span>Nilesh Chougule</span>, All Rights Reserved @2019</p>
         </div>
     </div>
 </body>
