--- a/Calculator.html
+++ b/Calculator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/Calculator_style.css">
 
 </head>
-<body>C
+<body>
     <div class="container">
         
         <div class="calculator">
@@ -47,7 +47,6 @@
                     <input type="button" value="=" onclick="display.value =eval(display.value)" class="equal operator">
                 </div>
             </form>
-            <p>&copy; copyright <span>Nilesh Chougule</span>, All Rights Reserved @2019</p>
         </div>
     </div>
 </body>
