--- a/Calculator2.html
+++ b/Calculator2.html
@@ -49,7 +49,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        function performOperation(operation) {
+        function performOperation(operation)
+         {
             var firstValue = parseFloat(document.getElementById("firstValue").value);
             var secondValue = parseFloat(document.getElementById("secondValue").value);
             var result;
